# Atman

./: Cargo.toml  build.rs
src/: error.rs  main.rs  types.rs  utils.rs
src/biz/: mod.rs  peer_client.rs  state.rs
src/data/: memory_state.rs  mod.rs
src/network/: mod.rs  p2p.rs
src/network/http/: dto.rs  mod.rs
src/schema/: api.v1.proto  block.rs  mod.rs  req_resp.rs  tx.rs  v1.rs
wallet/: Cargo.toml
wallet/src/: error.rs  lib.rs  signature.rs
