[package]
name = "atman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["p2p", 'wallet']

[workspace.dependencies]
log = {version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
thiserror = "2.0.3"

[dependencies]
axum = {version = "0.6.0", features = ["default", "macros"]}
prost = "0.13.3"
rand = "0.8.5"
tiny-keccak = { version = "2.0", features = ["sha3"] }
serde.workspace = true
hex.workspace = true
thiserror.workspace = true
bytes = "1.8.0"
log.workspace = true

[build-dependencies]
prost-build = "0.13.3"
