[package]
name = "atman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["p2p", 'wallet']

[workspace.dependencies]
log = {version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0"}
hex = "0.4.3"
thiserror = "2.0.3"
sled = "0.34"
tokio = { version = "1.28", features = ["full"] }

[dependencies]
wallet = {version = "0.1.0", path = "wallet"}
p2p = {version = "0.1.0", path = "p2p"}

axum = {version = "0.6.0", features = ["default", "macros"]}
clap = { version = "4.3", features = ["derive"] }
prost = "0.13.3"
rand = "0.8.5"
tiny-keccak = { version = "2.0", features = ["sha3"] }
serde.workspace = true
hex.workspace = true
thiserror.workspace = true
bytes = "1.8.0"
log.workspace = true
tokio.workspace = true

[build-dependencies]
prost-build = "0.13.3"
